fixing dependancies issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
         {% endif %}
 
         <footer>
-            <p>CABgrab by Ethan and Dhruv</p>
+            <p>by Ethan and Dhruv</p>
         </footer>
     </div>
 
